fixed top jobs flex spacing recruiter profile

--- a/src/Components/Recruiter/RecruiterProfile/DesktopRecruiterProfile/DesktopRecruiterTopJobs/DesktopRecruiterTopJobs.scss
+++ b/src/Components/Recruiter/RecruiterProfile/DesktopRecruiterProfile/DesktopRecruiterTopJobs/DesktopRecruiterTopJobs.scss
@@ -27,7 +27,7 @@
   &_topJobs {
     bottom: 6vh;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
     padding: 2vw;
   }
 }
